force-app/main/default/objects/Work_Record__c/Work_Record__c.object-meta.xml
<CustomObject>
    <label>Work Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>