force-app/main/default/objects/Work_Record__c/fields/Changes_Required__c.field-meta.xml
<CustomField>
    <fullName>Changes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changes Required</label>
    <type>Checkbox</type>
</CustomField>