force-app/main/default/objects/Work_Record__c/fields/COUNTRY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COUNTRY NAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>