force-app/main/default/objects/Work_Record__c/fields/Date_Certificate_of_Coverage_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Certificate_of_Coverage_Expires__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Certificate of Coverage Expires</label>
    <type>Date</type>
</CustomField>