force-app/main/default/objects/Work_Record__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Work Records</relationshipLabel>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>