force-app/main/default/objects/Work_Record__c/fields/Engagement_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mobile Employee</label>
    <referenceTo>Engagement_Assignee__c</referenceTo>
    <relationshipLabel>Work Records</relationshipLabel>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>