force-app/main/default/objects/Work_Record__c/fields/Engagement_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line Item</label>
    <referenceTo>Engagement_Line_Item__c</referenceTo>
    <relationshipLabel>Work Records</relationshipLabel>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>