force-app/main/default/objects/Work_Record__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Linked work records to an Individual will show the work record to the user in the portal. This creates a permanent relationship to the Individual separate from the Engagement.</description>
    <label>Individual</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Records</relationshipLabel>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>