force-app/main/default/objects/Work_Record__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Created</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Signing</fullName>
            </value>
            <value>
                <fullName>Assignee Review</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Awaiting Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Post Consultation</fullName>
            </value>
            <value>
                <fullName>Record Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>