force-app/main/default/objects/Work_Record__c/fields/Milestone_for_Client__c.field-meta.xml
<CustomField>
    <fullName>Milestone_for_Client__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Milestone__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gathering Documents</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Post Consultation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>