force-app/main/default/objects/Work_Record__c/fields/Net_Amount_out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_out_of_Pocket__c</fullName>
    <description>JIRA:AGMPB-312</description>
    <label>Net Amount out of Pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>