force-app/main/default/objects/Work_Record__c/fields/of_Records__c.field-meta.xml
<CustomField>
    <fullName>of_Records__c</fullName>
    <defaultValue>1</defaultValue>
    <label># of Records</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>