force-app/main/default/objects/Work_Record__c/fields/Other_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Type__c</fullName>
    <label>Other Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Other Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>