force-app/main/default/objects/Work_Record__c/fields/Responsible_Office__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Engagement__c</field>
            <operation>equals</operation>
            <valueField>Subscribed_Offices__c.Engagement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subscribed_Offices__c</referenceTo>
    <relationshipLabel>Work Records</relationshipLabel>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>