force-app/main/default/objects/Work_Record__c/fields/Signed_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_Name__c</fullName>
    <description>JIRA:AGMPB-280</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>