force-app/main/default/objects/Work_Record__c/fields/Tax_Return_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Return Approval</label>
    <type>Checkbox</type>
</CustomField>