force-app/main/default/objects/Work_Record__c/fields/Tax_Return_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax_Return_Approval_Date</label>
    <type>Date</type>
</CustomField>