force-app/main/default/objects/Work_Record__c/fields/Tax_Return_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Return Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>