force-app/main/default/objects/Work_Record__c/fields/Tax_Return_Summary__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Summary__c</fullName>
    <description>JIRA:AGMPB-312</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Return Summary</label>
    <type>TextArea</type>
</CustomField>