force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Record Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Internal Andersen User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Records</relationshipName>
    <type>Lookup</type>
</CustomField>