force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact_Email__c</fullName>
    <description>JIRA:AGMPB-409</description>
    <formula>Work_Record_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Record Contact Email</label>
    <type>Text</type>
</CustomField>