force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact_Name__c</fullName>
    <description>Jira:AGMPB-409</description>
    <formula>Work_Record_Contact__r.FirstName &amp; &quot; &quot; &amp; Work_Record_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Record Contact Name</label>
    <type>Text</type>
</CustomField>