force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact_Phone__c</fullName>
    <description>jira:AGMPB-409</description>
    <formula>Work_Record_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Record Contact Phone</label>
    <type>Text</type>
</CustomField>