force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact_TimeZone__c</fullName>
    <description>JIRA:AGMPB-567</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Record Contact TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>