force-app/main/default/objects/Work_Record__c/fields/Work_Record_Contact_Timezone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Contact_Timezone_Formula__c</fullName>
    <description>JIRA:AGMPB-567</description>
    <formula>TEXT(Work_Record_Contact__r.TimeZoneSidKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Record Contact Timezone Formula</label>
    <type>Text</type>
</CustomField>