force-app/main/default/objects/Work_Record__c/fields/Work_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Work Record ID</label>
    <type>AutoNumber</type>
</CustomField>