force-app/main/default/objects/Work_Record__c/fields/Work_Record_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Name_Formula__c</fullName>
    <formula>TEXT(Year__c) + &quot; &quot;+ COUNTRY_NAME__c + &quot; &quot;+ TEXT(Type__c) +&quot; (&quot;+  Individual__r.FirstName +&quot; &quot;+  Individual__r.LastName +&quot;)&quot;</formula>
    <label>Work Record Name Formula</label>
    <type>Text</type>
</CustomField>