force-app/main/default/objects/Work_Record__c/recordTypes/Certificate_of_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Certificate_of_Coverage</fullName>
    <active>true</active>
    <label>Certificate of Coverage</label>
</RecordType>