force-app/main/default/objects/Work_Record__c/recordTypes/Consultation.recordType-meta.xml
<RecordType>
    <fullName>Consultation</fullName>
    <active>true</active>
    <label>Consultation</label>
</RecordType>