force-app/main/default/objects/Work_Record__c/recordTypes/Engagement_Level.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Level</fullName>
    <active>true</active>
    <label>Engagement Level</label>
</RecordType>