force-app/main/default/objects/Work_Record__c/recordTypes/Tax_Return.recordType-meta.xml
<RecordType>
    <fullName>Tax_Return</fullName>
    <active>true</active>
    <label>Tax Return</label>
</RecordType>