force-app/main/default/objects/Work_Record__c/validationRules/WorkRecord_VR02_OtherMilestoneSequence.validationRule-meta.xml
<ValidationRule>
    <fullName>WorkRecord_VR02_OtherMilestoneSequence</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Other&quot;),
    ISCHANGED(Milestone__c),
    NOT(
        OR(
            TEXT(Milestone__c) = TEXT(PRIORVALUE(Milestone__c)),  
            AND(
                TEXT(Milestone__c) = &quot;Data Collection&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Record Created&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Record Created&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Data Collection&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Data Validation&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Data Collection&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Data Collection&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Data Validation&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Preparation&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Data Validation&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Data Validation&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Preparation&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Review&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Preparation&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Preparation&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Review&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Signing&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Review&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Review&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Signing&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Filing&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Signing&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Signing&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Filing&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Record Completed&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Filing&quot;
            ),
            AND(
                TEXT(Milestone__c) = &quot;Filing&quot;,
                TEXT(PRIORVALUE(Milestone__c)) = &quot;Record Completed&quot;
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>WorkRecord_VR02: Each milestone must be completed in order.</errorMessage>
</ValidationRule>