force-app/main/default/objects/Work_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Year__c</columns>
    <columns>Engagement_Assignee__c</columns>
    <columns>Engagement__c</columns>
    <columns>Work_Record_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>