force-app/main/default/objects/Work_Record__c/listViews/My_Open_Work_Orders.listView-meta.xml
<ListView>
    <fullName>My_Open_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Year__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Open Work Records</label>
</ListView>