force-app/main/default/objects/Work_Record__c/listViews/Work_Records_for_Reassignment.listView-meta.xml
<ListView>
    <fullName>Work_Records_for_Reassignment</fullName>
    <columns>NAME</columns>
    <columns>Work_Record_Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Record_Contact__c</field>
        <operation>equals</operation>
        <value>Todd Harrison</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Record__c.Tax_Return</value>
    </filters>
    <label>Work Records for Reassignment</label>
</ListView>